Fix z-index order

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,5 +1,5 @@
 .site-navbar {
-    @apply container mx-auto px-3 flex items-center justify-between h-16;
+    @apply container mx-auto p-4 flex items-center justify-between h-16;
 
     .logo-container {
         @apply flex items-center text-primary text-lg font-semibold;
@@ -8,8 +8,10 @@
     }
 
     .menu {
+        @apply p-4;
+
         .menu-item {
-            @apply text-navbarInactive px-3 py-2 rounded-md text-sm font-bold;
+            @apply text-navbarInactive p-4 rounded-md text-sm font-bold;
 
             .active {
                 background-color: transparent !important;
@@ -29,13 +31,13 @@
             }
 
             .inner-menu {
-                @apply dropdown dropdown-bottom text-navbarInactive px-3 py-2 rounded-md text-sm font-bold;
+                @apply dropdown dropdown-bottom text-navbarInactive p-4 rounded-md text-sm font-bold;
 
                 .inner-menu-list {
                     @apply z-[1] border-2 bg-white;
 
                     &-item {
-                        @apply text-navbarInactive px-3 py-2 rounded-md text-sm font-bold;
+                        @apply text-navbarInactive p-4 rounded-md text-sm font-bold;
                     }
                 }
             }
@@ -72,6 +74,8 @@
     }
 
     .mobile-menu {
+        @apply absolute z-[5] md:invisible bg-primary top-0 left-0 w-full h-screen;
+
         .menu-item {
             .active {
                 &::after {
